Fixes to map indexing & parsing